--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "clic",
+  "description": "marketing",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "echap",
   "dependencies": {
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
@@ -22,7 +22,6 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "netlify-cms-app": "^2.15.2",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-media-library-uploadcare": "^0.5.10",
     "node-sass": "^4.14.0",
     "prop-types": "^15.6.0",
